[package]
name = "market-io"
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["Gear Technologies"]

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git" }
codec = { package = "parity-scale-codec", version = "3.1.2", default-features = false }
scale-info = { version = "2.2.0", default-features = false }
primitive-types = { version = "0.12.1", default-features = false, features = ["scale-info"] }
nft-io = { git = "https://github.com/gear-dapps/non-fungible-token.git", tag = "0.2.4" }
